{
    "name": "Controles",
    "maps": [
        {
            "name": "Action_Map",
            "id": "c88828da-8733-4e4c-ab45-60430c55cb5a",
            "actions": [
                {
                    "name": "Deplacement",
                    "type": "Value",
                    "id": "1c145593-c12f-4060-aa26-08f917b9d90c",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Saut",
                    "type": "Button",
                    "id": "858abd64-65f1-4ad8-be68-c22cf5241c65",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "93c521c9-b8d4-4efe-97fc-8822f5c5ed5f",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Deplacement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "f7b4a45a-cc15-4035-8452-0dd4de4e6a0a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Deplacement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "44859a56-3d5c-49ee-be61-73ae7af5cfe5",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Deplacement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "fc95d049-bac5-4323-9418-30f7e7660c44",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Saut",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}